Ajout d'un page json

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Équipe</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/all.css" />
   </head>
   <body>
@@ -27,102 +27,129 @@
         <div class="artists-container">
           <!--Artiste 1-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=1" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/conconbre.jpg" alt="Artiste 1" />
+                <div class="text-overlay">
+                  <p>Vendredi 08 Décembre</p>
+                  <h2>Concombre</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 2-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=2" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/dalton.jpg" alt="Artiste 2" />
+                <div class="text-overlay">
+                  <p>Vendredi 08 Décembre</p>
+                  <h2>Dalton</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 3-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=3" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/glowal.jpg" alt="Artiste 3" />
+                <div class="text-overlay">
+                  <p>Vendredi 08 Décembre</p>
+                  <h2>Glowal</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 4-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=4" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/citron.jpg" alt="Artiste 4" />
+                <div class="text-overlay">
+                  <p>Samedi 09 Décembre</p>
+                  <h2>Citron citron</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 5-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=5" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/henry.jpg" alt="Artiste 5" />
+                <div class="text-overlay">
+                  <p>Samedi 09 Décembre</p>
+                  <h2>Henry</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 6-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=6" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <div class="text-overlay">
+                  <p>Date</p>
+                  <h2>Artiste 6</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 7-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=7" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <div class="text-overlay">
+                  <p>Date</p>
+                  <h2>Artiste 7</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 8-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=8" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <div class="text-overlay">
+                  <p>Date</p>
+                  <h2>Artiste 8</h2>
+                </div>
+              </div>
+            </a>
           </div>
 
           <!--Artiste 9-->
           <div class="artists-image">
-            <div class="artists-member">
-              <img class="image" src="Bob.jpg" />
-              <h2>Artiste 1:</h2>
-              <p>horaire-horaire</p>
-              <p>Scène:</p>
-            </div>
+            <a href="artiste.html?id=9" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <div class="text-overlay">
+                  <p>Date</p>
+                  <h2>Artiste 9</h2>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
     </main>
-
     <footer>
       <p>
         Trans Musicales © Copyrights<br />
         All rights reserved 1979-2024
       </p>
     </footer>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
