Ajout des artistes sur la page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
           <div class="artists-image">
             <a href="artiste.html?id=1" class="artists-member">
               <div class="image-container">
-                <img class="image" src="img/conconbre.jpg" alt="Artiste 1" />
+                <img
+                  class="image"
+                  src="img/hanaa_ouassim.jpg"
+                  alt="Artiste 1"
+                />
                 <div class="text-overlay">
-                  <p>Vendredi 08 Décembre</p>
-                  <h2>Concombre</h2>
+                  <p>Mercredi 06 Décembre</p>
+                  <h2>HANAA OUASSIM</h2>
                 </div>
               </div>
             </a>
@@ -42,10 +46,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=2" class="artists-member">
               <div class="image-container">
-                <img class="image" src="img/dalton.jpg" alt="Artiste 2" />
+                <img class="image" src="img/la_brucelle.jpg" alt="Artiste 2" />
                 <div class="text-overlay">
-                  <p>Vendredi 08 Décembre</p>
-                  <h2>Dalton</h2>
+                  <p>Mercredi 06 Décembre</p>
+                  <h2>LA BRUCELLE</h2>
                 </div>
               </div>
             </a>
@@ -55,10 +59,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=3" class="artists-member">
               <div class="image-container">
-                <img class="image" src="img/glowal.jpg" alt="Artiste 3" />
+                <img class="image" src="img/yalla_miku.jpg" alt="Artiste 3" />
                 <div class="text-overlay">
-                  <p>Vendredi 08 Décembre</p>
-                  <h2>Glowal</h2>
+                  <p>Mercredi 06 Décembre</p>
+                  <h2>YALLA MIKU</h2>
                 </div>
               </div>
             </a>
@@ -68,10 +72,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=4" class="artists-member">
               <div class="image-container">
-                <img class="image" src="img/citron.jpg" alt="Artiste 4" />
+                <img class="image" src="img/anna_erhard.jpg" alt="Artiste 4" />
                 <div class="text-overlay">
-                  <p>Samedi 09 Décembre</p>
-                  <h2>Citron citron</h2>
+                  <p>Jeudi 07 Décembre</p>
+                  <h2>ANNA ERHARD</h2>
                 </div>
               </div>
             </a>
@@ -81,10 +85,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=5" class="artists-member">
               <div class="image-container">
-                <img class="image" src="img/henry.jpg" alt="Artiste 5" />
+                <img class="image" src="img/sextile.jpg" alt="Artiste 5" />
                 <div class="text-overlay">
-                  <p>Samedi 09 Décembre</p>
-                  <h2>Henry</h2>
+                  <p>Jeudi 07 Décembre</p>
+                  <h2>SEXTILE</h2>
                 </div>
               </div>
             </a>
@@ -94,10 +98,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=6" class="artists-member">
               <div class="image-container">
-                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <img class="image" src="img/yame.jpg" alt="Artiste 6" />
                 <div class="text-overlay">
-                  <p>Date</p>
-                  <h2>Artiste 6</h2>
+                  <p>Jeudi 07 Décembre</p>
+                  <h2>YAMÉ</h2>
                 </div>
               </div>
             </a>
@@ -107,10 +111,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=7" class="artists-member">
               <div class="image-container">
-                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <img class="image" src="img/conconbre.jpg" alt="Artiste 1" />
                 <div class="text-overlay">
-                  <p>Date</p>
-                  <h2>Artiste 7</h2>
+                  <p>Vendredi 09 Décembre</p>
+                  <h2>CONCOMBRE</h2>
                 </div>
               </div>
             </a>
@@ -120,10 +124,10 @@
           <div class="artists-image">
             <a href="artiste.html?id=8" class="artists-member">
               <div class="image-container">
-                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <img class="image" src="img/dalton.jpg" alt="Artiste 1" />
                 <div class="text-overlay">
-                  <p>Date</p>
-                  <h2>Artiste 8</h2>
+                  <p>Vendredi 09 Décembre</p>
+                  <h2>DALTON</h2>
                 </div>
               </div>
             </a>
@@ -133,10 +137,96 @@
           <div class="artists-image">
             <a href="artiste.html?id=9" class="artists-member">
               <div class="image-container">
-                <img class="image" src="Bob.jpg" alt="Artiste 1" />
+                <img class="image" src="img/glowal.jpg" alt="Artiste 1" />
                 <div class="text-overlay">
-                  <p>Date</p>
-                  <h2>Artiste 9</h2>
+                  <p>Vendredi 09 Décembre</p>
+                  <h2>GLOWAL</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!--Artiste 10-->
+          <div class="artists-image">
+            <a href="artiste.html?id=10" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/citron.jpg" alt="Artiste 10" />
+                <div class="text-overlay">
+                  <p>Samedi 10 Décembre</p>
+                  <h2>CITRON CITRON</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!--Artiste 11-->
+          <div class="artists-image">
+            <a href="artiste.html?id=11" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/nusha.jpg" alt="Artiste 11" />
+                <div class="text-overlay">
+                  <p>Samedi 10 Décembre</p>
+                  <h2>NUSHA</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!--Artiste 12-->
+          <div class="artists-image">
+            <a href="artiste.html?id=12" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/roni.jpg" alt="Artiste 12" />
+                <div class="text-overlay">
+                  <p>Samedi 10 Décembre</p>
+                  <h2>RONI</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!--Artiste 13-->
+          <div class="artists-image">
+            <a href="artiste.html?id=13" class="artists-member">
+              <div class="image-container">
+                <img
+                  class="image"
+                  src="img/cerys_hafana.jpg"
+                  alt="Artiste 13"
+                />
+                <div class="text-overlay">
+                  <p>Dimanche 11 Décembre</p>
+                  <h2>CERYF HAFANA</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!--Artiste 14-->
+          <div class="artists-image">
+            <a href="artiste.html?id=14" class="artists-member">
+              <div class="image-container">
+                <img class="image" src="img/raul_refree.jpg" alt="Artiste 14" />
+                <div class="text-overlay">
+                  <p>Dimanche 11 Décembre</p>
+                  <h2>RAUL REFREE</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!--Artiste 15-->
+          <div class="artists-image">
+            <a href="artiste.html?id=15" class="artists-member">
+              <div class="image-container">
+                <img
+                  class="image"
+                  src="img/hanaa_ouassim.jpg"
+                  alt="Artiste 15"
+                />
+                <div class="text-overlay">
+                  <p>Dimanche 11 Décembre</p>
+                  <h2>HANAA OUASSIM</h2>
                 </div>
               </div>
             </a>
