Changement du logo

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
               <div class="image-container">
                 <img
                   class="image"
-                  src="img/hanaa_ouassim.jpg"
+                  src="img/nusantara beat.jpg"
                   alt="Artiste 1"
                 />
                 <div class="text-overlay">
                   <p>Mercredi 06 Décembre</p>
-                  <h2>HANAA OUASSIM</h2>
+                  <h2>NUSANTARA BEAT</h2>
                 </div>
               </div>
             </a>
