--- a/artiste.html
+++ b/artiste.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo"><img src="logo.png" alt="Logo" /></div>
+        <img src="img/logo.png" alt="Logo de test" />
         <ul>
           <li><a href="index.html">Programmation</a></li>
           <li><a href="anciensCTF.html">Billeterie</a></li>
