--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <li><a href="challenges.html">Cashless</a></li>
           <li><a href="veille.html">Infos</a></li>
         </ul>
-        <i class="fas fa-bars"></i>
       </nav>
     </header>
 
@@ -31,7 +30,7 @@
               <div class="image-container">
                 <img
                   class="image"
-                  src="img/nusantara beat.jpg"
+                  src="img/nusantara_beat.jpg"
                   alt="Artiste 1"
                 />
                 <div class="text-overlay">
@@ -111,7 +110,7 @@
           <div class="artists-image">
             <a href="artiste.html?id=7" class="artists-member">
               <div class="image-container">
-                <img class="image" src="img/conconbre.jpg" alt="Artiste 1" />
+                <img class="image" src="img/concombre.jpg" alt="Artiste 1" />
                 <div class="text-overlay">
                   <p>Vendredi 09 Décembre</p>
                   <h2>CONCOMBRE</h2>
@@ -196,7 +195,7 @@
                 />
                 <div class="text-overlay">
                   <p>Dimanche 11 Décembre</p>
-                  <h2>CERYF HAFANA</h2>
+                  <h2>CERYS HAFANA</h2>
                 </div>
               </div>
             </a>
@@ -209,7 +208,7 @@
                 <img class="image" src="img/raul_refree.jpg" alt="Artiste 14" />
                 <div class="text-overlay">
                   <p>Dimanche 11 Décembre</p>
-                  <h2>RAUL REFREE</h2>
+                  <h2>RAÜL REFREE</h2>
                 </div>
               </div>
             </a>
