--- a/artiste.html
+++ b/artiste.html
@@ -19,12 +19,15 @@
       </nav>
     </header>
     <div class="artist-details">
-      <img id="artistImage" src="" alt="Image de l'artiste" />
-      <h1 id="artistName"></h1>
-      <p id="artistBio"></p>
-      <!-- L'iframe Spotify sera ajouté ici dynamiquement -->
+      <h1 id="artistName" class="artist-title"></h1>
+      <div class="artist-content">
+        <img id="artistImage" src="" alt="Image de l'artiste" />
+        <div>
+          <div id="performances"></div>
+          <p id="artistBio" class="artist-bio"></p>
+        </div>
+      </div>
     </div>
-
     <footer>
       <p>
         Trans Musicales © Copyrights<br />
