--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <!-- Métadonnées du document, incluant le jeu de caractères et la configuration de la vue mobile -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Équipe</title>
+    <!-- Lien vers le fichier CSS externe pour styliser la page -->
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
+    <!-- En-tête de la page contenant la navigation -->
     <header>
       <nav>
-        <div class="logo"><img src="logo.png" alt="Logo" /></div>
+        <!-- Logo de l'organisation ou de l'événement -->
+        <div class="logo">
+          <img src="logo.png" alt="Logo" />
+        </div>
+        <!-- Barre de navigation avec des liens vers diverses sections du site -->
         <ul>
           <li><a href="index.html">Programmation</a></li>
           <li><a href="anciensCTF.html">Billeterie</a></li>
@@ -19,9 +26,11 @@
       </nav>
     </header>
 
+    <!-- Contenu principal de la page : liste des artistes -->
     <main>
       <div class="artist-page">
         <h1 class="title">Liste des artistes</h1>
+        <!-- Conteneur pour les images et informations des artistes -->
         <div class="artists-container">
           <!--Artiste 1-->
           <div class="artists-image">
@@ -232,12 +241,15 @@
         </div>
       </div>
     </main>
+
+    <!-- Pied de page contenant les droits d'auteur et informations légales -->
     <footer>
       <p>
         Trans Musicales © Copyrights<br />
         All rights reserved 1979-2024
       </p>
     </footer>
+    <!-- Script JavaScript pour les fonctionnalités interactives -->
     <script src="assets/js/script.js"></script>
   </body>
 </html>
